--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.2"
+    "@astrojs/tailwind": "^3.1.2",
+    "astro": "^2.3.4",
+    "astro-icon": "^0.8.0",
+    "tailwindcss": "^3.0.24"
   }
 }
